package Client;

import Entity.Application;
import Utility.IO;

public class Main {
    public static void main(String[] args) {
        Application streaming = new Application("HALY");
        streaming.launchApplication();
    }
}
