@startuml
'https://plantuml.com/class-diagram
!pragma layout smetana

'Client Package
package "Client class"{
class Main
}

'Utility Package
package "Utility classes"{
class UserInterface
class InputOutput
}

'Entity Package
package "Entity classes"{
class Movie
class Application
class User
abstract Media
}

'Label on Relations !MANGLER
Application "1" *-- "1" UserInterface: contains
Application "1" *-- "1" InputOutput: contains
Application "1" *-- "0..*" User: contains
Application "1" *-- "0..*" Media: contains
Media "1" <|-- "1" Movie: is
Main "1" *-- "1" Application: contains

'Class Methods & Attributes
Main : + Application app

Application : - Set<User> users
Application : - Set<Media> medias
Application : - IO io;
Application : - UI ui;
Application : - User onlineUser
Application : - List<String> categories
Application : - String appName
Application : + Application(String appName)
Application : + void launchApplication()
Application : + void startMenu()
Application : + void createUser()
Application : + boolean loginValidator()
Application : + User findUser(String username)
Application : + void login()
Application : + void mainMenu()
Application : + void printMediaList(ArrayList<Media> m)
Application : + Media search(String input)
Application : + void logout()
Application : + void chooseMedia()
Application : + void chooseCategory()
Application : + void mediaOptions(Media m)
Application : + void addMediaToPersonalList(Media m)
Application : + void playMedia()
Application : + List<User> getUsers()

User : - String name
User : - String userName
User : - String password
User : - ArrayList<Media> watchedMedia
User : - ArrayList<Media> savedMedia
User : + User(String name, String userName, String password)
User : - String checkUserName(String userName)
User : - String checkPassword(String password)

User : + String getName()
User : + String getUserName()
User : + String getPassword()
User : + ArrayList<Media> getWatched()
User : + ArrayList<Media> getSavedMedia()
User : + void addWatchedMedia(Media m)
User : + void addSavedMedia(Media m)

InputOutput : - File file
InputOutput : - Scanner scan
InputOutput : - Set<Media> setOfMedia = new HashSet<>();
InputOutput : + List<String> readData (String path)
InputOutput : + List<User> readUserData(String path)
InputOutput : + void saveUsers(String path, List<User> userList)
InputOutput : + Set<Media> readMovieData(String path)

UserInterface : - Scanner scan = new Scanner (System.in)
UserInterface : + void displayMessage(String msg)
UserInterface : + String getInput(String msg)

Media : - String title
Media : - List<String> categories
Media : - float rating
Media : - int releaseYear
Media : - int id
Media : - static int counter = 1
Media : + Media(String title, ArrayList<String> categories, float rating, int releaseYear)
Media : + int getId()
Media : + String getTitle()
Media : + List<String> getCategory()
Media : + String toString()
Media : + String showCategories()
Media : + boolean equals(Object o)
Media : + int hashCode()

Movie : + Movie(String movieTitle, ArrayList<String> movieCategories, float movieRating, int movieReleaseYear)


@enduml